--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "humps",
-  "version": "2.0.2",
+  "name": "humps-with-key-path",
+  "version": "1.0.0",
   "description": "Underscore-to-camelCase converter (and vice versa) for strings and object keys in JavaScript.",
   "main": "humps.js",
   "scripts": {
@@ -19,13 +19,8 @@
     "strings",
     "objects"
   ],
-  "author": "Dom Christie",
   "license": "MIT",
   "devDependencies": {
     "mocha": "^2.2.5"
-  },
-  "bugs": {
-    "url": "https://github.com/domchristie/humps/issues"
-  },
-  "homepage": "https://github.com/domchristie/humps"
+  }
 }
